add signalR for course and user

--- a/Web-Triolingo/Pages/Courses/CourseList.cshtml
+++ b/Web-Triolingo/Pages/Courses/CourseList.cshtml
@@ -229,3 +229,5 @@
         })
     </script>
 }
+<script src="~/js/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/signalr.js"></script>
