--- a/Web-Triolingo/Pages/Users/UserControl.cshtml
+++ b/Web-Triolingo/Pages/Users/UserControl.cshtml
@@ -318,3 +318,6 @@ else
 		</div>
 	</div>
 </div>
+
+<script src="~/js/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/signalr.js"></script>
